# kurs-bot

./: .editorconfig  .env.template  .env.test  .gitignore  .pre-commit-config.yaml  ACIM_LESSONS_IMPORT.md  ADIM_LOG.md  AGENTS.md  AGENT_INSTRUCTIONS.md  AI.md  ARCHITECTURE.md  CLAUDE.md  COPILOT_INSTRUCTIONS.md  DEPLOYMENT.md  FIX_INSTRUCTIONS.md  GDPR_PLAN_IMPLEMENTATION.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MIGRATE_TO_ISO8601_FOR_TIME_ZONE.md  NEXT_JOB.md  NPM_USAGE.md  PDF_IMPORT_FORMATTING_NOTE.md  QUICKSTART_MEMORY.md  README.md  SWARM_SUBAGENT_PATTERN.md  Start-Linux.ps1  Start-Linux.sh  Start-Windows.ps1  TEST_MIGRATION_TODO.md  TEST_REFACTORING_PLAN.md  TODO.md  TODO_ONBOARDING_IMPROVEMENT.md  TODO_SWARM.md  TODO_SWARM_TELEGRAM.md  TODO_UNIFY_SPIRITUAL_MODE.md  VECTOR_EMBEDDINGS_IMPLEMENTATION.md  WIP_RAG_DONE.md  WIP_UPDATE.md  WORK_IN_PROGRESS_ENHANC;MENT.md  (+26 more)
.github/workflows/: ci.yml
Pri_2_todo/: GDPR_PLAN_IMPLEMENTATION.md  VECTOR_FAISS_TO_DO.md
docker/: Dockerfile  docker-compose.yml
docs/: ADMIN_LOG.md  ARCHITECTURE.md  DATABASE_GUIDE.md  DB_MANAGEMENT.md  DPIA.md  DSR_ID_VERIFICATION.md  EMBEDDINGS_TRIGGERS.md  FUNCTION_CALLING.md  FUTURE_MIGRATE_TO_FAISS_HNSW.md  IMPLEMENTATION_SUMMARY.md  INCIDENT_RESPONSE_PLAN.md  INDEX.md  LESSONS.md  LESSON_DELIVERY_FLOW.md  MEMORY_CONTEXT_SYSTEM.md  MEMORY_EXTRACTOR.md  MILESTONE_PLAN.md  NPM_USAGE.md  ONBOARDING.md  OPTIONAL_TEST_SPEED_UP.md  PDF_IMPORT_FORMATTING_NOTE.md  PRIVACY_NOTICE.md  RAG_MODE.md  RAG_MODE_USAGE.md  RETENTION_SCHEDULE.md  ROPA.md  SCHEDULER.md  SCRIPTS_ORGANIZATION.md  SWARM.md  VENDOR_SUBPROCESSORS.md  _hidden_x_swarm.txt  memory_classifier_prompt.md
docs/dev/: ARCHITECTURE.md  DB_GUIDE.md
docs/gdpr/: DPIA.md  DSR_ID_VERIFICATION.md  GDPR_PLAN_IMPLEMENTATION.md  INCIDENT_RESPONSE_PLAN.md  PRIVACY_NOTICE.md  README.md  RETENTION_SCHEDULE.md  ROPA.md  VENDOR_SUBPROCESSORS.md
migrations/: env.py
migrations/versions/: 579b16a573a2_add_is_active_to_memory.py  7f4c2d1a9b8e_add_lesson_to_users.py  a3f4b2c1d6e7_add_user_timezone.py  add_conversation_context.py  add_gdpr_tables.py  add_gdpr_verifications.py  add_job_states.py  add_memory_embeddings.py  add_memory_metadata_columns.py  add_prompt_templates.py  add_trigger_embeddings.py  de6254f61b96_initial_schema.py  merge_heads.py  readd_memory_metadata.py  readd_value_hash.py
scripts/: README.md  analyze_duplicates.py  backfill_user_timezones.py  check_artifacts.py  check_lesson12.py  check_lesson12_simple.py  check_lesson14_page_break.py  check_lesson150.py  check_lesson5.py  check_lesson_297_298.py  check_lessons_db.py  check_lessons_full.py  ci_seed_triggers.py  ci_trigger_data.py  clear_dev_db.py  cli.py  daily_lesson_sender.py  db_manage.py  debug_boundaries.py  debug_lesson12_pdf.py  debug_lesson14.py  debug_lesson5.py  debug_memory_extraction.py  debug_pdf_import.py  debug_raw_text.py  debug_set_daily.py  debug_user_request.py  delete_dev_db.py  detailed_297_298.py  dev_static_server.py  export_trigger_embeddings.py  final_verification.py  force_set_language_to_en.py  import_acim_lessons.py  init_prod_db.py  inspect_jobs.py  inspect_memories.py  inspect_messages.py  inspect_schedule.py  inspect_schedules.py  (+42 more)
scripts/debug/: debug_cloud_lesson.py  debug_extraction.py  debug_hourly_lessons.py  debug_lesson_request.py  debug_reminders_user1.py  debug_schedule.py  debug_set_daily.py  debug_telegram_streaming.py  debug_trigger_matching.py  debug_user_request.py  manual_test_memory_e2e.py  probe_memories.py  probe_memories_qwen.py  profile_uvicorn.py  (+2 more)
src/: __init__.py  config.py
swarm/: README.md  README_INTEGRATION.md  TODO.md  __init__.py  cli.py  graph.py  nodes.py  state.py  test_approval_blocking.py  test_cli_async.py  test_graph_async.py
swarm/mini_swe_agent/: __init__.py  pyproject.toml  test_extended_workflow.py
swarm/mini_swe_agent/agents/: README.md  __init__.py  default.py  interactive.py  interactive_textual.py
swarm/mini_swe_agent/config/: default.yaml  github_issue.yaml  mini.tcss  mini.yaml
swarm/mini_swe_agent/config/extra/: swebench_roulette.yaml  swebench_xml.yaml
swarm/mini_swe_agent/environments/: README.md  __init__.py
swarm/mini_swe_agent/models/: README.md  __init__.py  anthropic.py  litellm_model.py  litellm_response_api_model.py  local_model.py  openrouter_model.py  portkey_model.py  portkey_response_api_model.py  requesty_model.py  test_models.py
swarm/mini_swe_agent/models/extra/: roulette.py
swarm/mini_swe_agent/models/utils/: __init__.py  cache_control.py  key_per_thread.py  openai_utils.py
swarm/mini_swe_agent/run/: hello_world.py  mini.py
swarm/mini_swe_agent/run/extra/: config.py  github_issue.py  inspector.py  swebench.py  swebench_single.py
swarm/mini_swe_agent/run/extra/utils/: batch_progress.py
tasks/: RESEARCH_OPENAI.md  RESEARCH_PROMPT_FORMAT.md  TODO New project structure.md  TODO_MASTER.md  TODO_routing_hardening.md  lesson_html_fix.md  lessons.md  todo.md
tests/: README.md  conftest.py  debug_onboarding_memory_inspect.py  helpers.py  ollama_mock_conftest.py  test_api_app.py  test_detect_language_hi.py  test_detect_language_regression.py  test_detect_language_regression_portuguese.py  test_embedding_queue.py  test_embedding_service.py  test_embedding_worker_batch.py  test_embeddings_manual.py  test_gdpr.py  test_gdpr_api.py  test_gdpr_verification.py  test_import_lesson_headers.py  test_integration_memory.py  test_keyword_detector.py  test_langdetect_raw.py  test_language_detection_short_messages.py  test_language_override_set_command.py  test_lesson_query_detection.py  test_lesson_short_circuit.py  test_lesson_trigger_order.py  test_memory_driven_scheduler_integration.py  test_memory_extractor.py  test_memory_integration.py  test_memory_integration_live.py  test_memory_manager.py  test_memory_model.py  test_models.py  test_next_day_confirmation.py  test_norwegian_onboarding.py  test_onboarding.py  test_onboarding_defers_lesson_request.py  test_onboarding_e2e.py  test_onboarding_fact_extraction.py  test_onboarding_flow.py  test_onboarding_flow_e2e.py  (+37 more)
(+343 files in other folders)
