[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kurs-bot"
version = "0.1.0"
description = "Kurs-bot: ACIM lesson delivery bot"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Johannes Steen"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic",
    "apscheduler",
    "langdetect",
    "ollama",
    "pydantic-settings",
    "pymupdf",
    "pydantic_core==2.41.5",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-xdist",
    "httpx",
    "mypy",
]



[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# === SAFETY-CRITICAL RULES ===
# DTZ: Prevents naive datetime bugs (the #1 bug class in this project)
# F:   Catches undefined names, unused imports, shadowed variables
# B:   Catches common Python gotchas (mutable defaults, assert usage, etc.)
#
# === STYLE RULES (lower priority) ===
# E/W: Basic pycodestyle — whitespace, indentation, etc.
# I:   Import sorting — currently disabled to avoid noise
select = [
    "F",      # pyflakes — undefined names, unused imports
    "DTZ",    # flake8-datetimez — BANS naive datetime construction
    "B",      # flake8-bugbear — common Python gotchas
    "E4", "E7", "E9",  # try/except improvements
    "UP",          # pyupgrade: modern Python features
    "C4", "ERA001", # comprehensions: readability/performance
    "Q",            # docstring quotes consistency
    "I",            # isort: import sorting
    "SLF",          # self/cls/Cls consistency
]
ignore = [
    "B008",   # function call in default arg (FastAPI)
    "ARG001", # unused args (common in callbacks)
    "PLR0913",# too-many-args (FastAPI endpoints)
    "SLF001", # self not first (dunder methods)
    "UP006",  # Use: List -> use list
    "UP035",  # Use: Dict -> use dict
    "UP045",  # Optional for Py 3.9
    "ERA001", # Commented out code (that is pure comment)
    "E402",   # import inside code
    "E711",   # compare == True
    "E712",   # compare == None
    "I001",   # import sorting
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "DTZ",    # datetime strictness relaxed in tests
    "B",      # bugbear relaxed in tests
    "F841",   # unused variable in tests
]
"migrations/**/*.py" = [
    "F",      # migrations are auto-generated
]
# strptime for date-only parsing (no timezone needed for .date() extraction)
"src/functions/parameters.py" = ["DTZ007"]
"src/services/traffic_tracker.py" = ["DTZ007"]
# Intentional re-exports for backward compatibility
"src/models/database.py" = ["F401"]
"src/scheduler/maintenance.py" = ["F401"]
"src/scheduler/manager.py" = ["F401"]
"src/api/telegram_routes.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
preview = true
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]
