[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kurs-bot"
version = "0.1.0"
description = "Kurs-bot: ACIM lesson delivery bot"
readme = "README.md"
requires-python = ">=3.12"

authors = [{name = "Johannes Steen"}]
dependencies = [
    "langchain-openai==1.2.1",
    "langgraph==1.1.10",
    "langchain-community==0.4.1",
    "typer==0.25.1",
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "apscheduler==3.11.2",
    "langdetect==1.0.9",
    "ollama==0.6.2",
    "pydantic-settings==2.14.0",
    "pymupdf==1.27.2.3",
    "pydantic_core==2.41.5",
    # Security: pinned transitive dependencies
    "aiohttp==3.13.5",
    "langchain-core==1.3.3",
    "langchain-text-splitters==1.1.2",
    "langsmith==0.8.1",
    "pygments==2.20.0",
    "setuptools==82.0.1",
]

[project.optional-dependencies]
dev = [
    "pip>=26.1",
    "ruff==0.6.8",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.8.0",
    "httpx==0.28.1",
    "mypy==1.20.2",
    "pip-audit==2.10.0",
    "pip-tools==7.5.3",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
# === SAFETY-CRITICAL RULES ===
# DTZ: Prevents naive datetime bugs (the #1 bug class in this project)
# F:   Catches undefined names, unused imports, shadowed variables
# B:   Catches common Python gotchas (mutable defaults, assert usage, etc.)
#
# === STYLE RULES (lower priority) ===
# E/W: Basic pycodestyle — whitespace, indentation, etc.
# I:   Import sorting — currently disabled to avoid noise
select = [
    "F",      # pyflakes — undefined names, unused imports
    "DTZ",    # flake8-datetimez — BANS naive datetime construction
    "B",      # flake8-bugbear — common Python gotchas
    "E4", "E7", "E9",  # try/except improvements
    "UP", "UP007", # pyupgrade: modern Python features (add UP007 for | union)
    "C4", "ERA001", # comprehensions: readability/performance
    "Q",            # docstring quotes consistency
    "I",            # isort: import sorting
    "SLF",          # self/cls/Cls consistency
]
ignore = [
    "B008",   # function call in default arg (FastAPI)
    "ARG001", # unused args (common in callbacks)
    "PLR0913",# too-many-args (FastAPI endpoints)
    "SLF001", # self not first (dunder methods)
    "UP006",  # Use: List -> use list
    "UP035",  # Use: Dict -> use dict

    "ERA001", # Commented out code (that is pure comment)
    "E402",   # import inside code
    "E711",   # compare == True
    "E712",   # compare == None
    "I001",   # import sorting
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "DTZ",    # datetime strictness relaxed in tests
    "B",      # bugbear relaxed in tests
    "F841",   # unused variable in tests
]
"migrations/**/*.py" = [
    "F",      # migrations are auto-generated
]
# strptime for date-only parsing (no timezone needed for .date() extraction)
"src/functions/parameters.py" = ["DTZ007"]
"src/services/traffic_tracker.py" = ["DTZ007"]
# Central timezone module — uses timezone.utc intentionally
"src/core/timezone.py" = ["DTZ"]
# Intentional re-exports for backward compatibility
"src/models/database.py" = ["F401"]
"src/scheduler/maintenance.py" = ["F401"]
"src/scheduler/manager.py" = ["F401"]
"src/api/telegram_routes.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
preview = true
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:urllib3 v2 only supports OpenSSL",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
norecursedirs = ["scripts/debug"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.uv.workspace]
members = ["packages/*", "swarm"]
