[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-mini-swe-agent"
version = "0.2.0"
description = "Mini-SWE-Agent integration for swarm/ anti-drift CODE WRITER"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "pydantic>=2.0",
    "litellm>=1.75.5",
    "tenacity",
    "rich",
    "python-dotenv",
    "platformdirs",
    "prompt_toolkit",
    "textual",
    "openai!=1.100.0,!=1.100.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["swarm.mini_swe_agent*"]
